# atlas-cli-api-plugin

./: manifest.template.yml  raw-spec.yaml
.github/workflows/: publish.yml
crates/atlas-cli-api-plugin/: Cargo.toml
crates/atlas-cli-api-plugin/src/: hierarchy.rs  main.rs  operation.rs  path.rs
crates/atlas-cli-api-plugin/src/hierarchy/: cli.rs  path.rs
