[package]
name = "atlas-cli-api-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["cargo", "string"] }
convert_case = "0.6.0"
openapiv3 = "2.0.0"
pluralizer = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
